# arch

./: README.md
01_structurizr/: ReadMe.md  workspace.dsl
02_system_design_task/02_rest_poco_server/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  swagger.yaml
02_system_design_task/02_rest_poco_server/loadtest/: README.md  run.sh
02_system_design_task/02_rest_poco_server/postman/: Poco Template Server.postman_collection.json
02_system_design_task/02_rest_poco_server/src/: main.cpp
02_system_design_task/02_rest_poco_server/src/handler/: auth_config.h  auth_handler.h  auth_middleware.h  car_handler.h  globals.cpp  metrics_handler.h  not_found_handler.h  query_utils.h  rental_handler.h  request_counter.h  router_factory.h  user_handler.h
02_system_design_task/02_rest_poco_server/src/model/: car.h  rental.h  user.h
02_system_design_task/02_rest_poco_server/src/repository/: car_repository.h  rental_repository.h  user_repository.h
